...
        _completed = State(wrappedValue: item.completed)
    }

    var body: some View {
        Form {
            Section(header: Text(NSLocalizedString("Basic settings", comment: ""))) {
                TextField("Item name", text: $title.onChange(self.update))
                TextField("Description", text: $detail.onChange(self.update))
            }

            Section(header: Text(NSLocalizedString("Priority", comment: ""))) {
                Picker("Priority", selection: $priority.onChange(self.update)) {
                    Text("Low").tag(1)
...
